feat: for JavaFX 17